# OpenArangoDBCore

./: .dockerignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docker-integration.yml  release.yml  sanitizers.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Enterprise/Aql/: LocalEnumeratePathsNode.h  LocalGraphNode.h  LocalShortestPathNode.h  LocalTraversalNode.cpp  LocalTraversalNode.h  MinHashFunctions.cpp  MinHashFunctions.h
Enterprise/Audit/: AuditFeature.cpp  AuditFeature.h  AuditLogger.cpp  AuditLogger.h
Enterprise/Auth/: LDAPConfig.cpp  LDAPConfig.h  LDAPHandler.cpp  LDAPHandler.h
Enterprise/Basics/: EnterpriseCompat.h  Version.h
Enterprise/Cluster/: ReadFromFollower.cpp  ReadFromFollower.h  SatelliteDistribution.cpp  SatelliteDistribution.h
Enterprise/Encryption/: EncryptionFeature.cpp  EncryptionFeature.h  EncryptionProvider.cpp  EncryptionProvider.h
Enterprise/Graph/: PathValidatorEE.cpp
Enterprise/IResearch/: AqlCompat.h  GeoAnalyzerEE.h  IResearchAnalyzerFeature.cpp  IResearchAnalyzerFeature.h  IResearchDataStoreEE.hpp  IResearchDocumentEE.h  IResearchDocumentEE.hpp  IResearchOptimizeTopK.cpp  IResearchOptimizeTopK.h
Enterprise/License/: LicenseFeature.cpp  LicenseFeature.h
Enterprise/Maskings/: AttributeMasking.cpp  AttributeMasking.h  AttributeMaskingEE.cpp  AttributeMaskingEE.h
Enterprise/RClone/: CloudProvider.h  RCloneConfig.cpp  RCloneConfig.h  RCloneFeature.cpp  RCloneFeature.h  RCloneProcess.cpp  RCloneProcess.h
Enterprise/Replication/: CheckpointReceiver.cpp  CheckpointReceiver.h  CheckpointReceiver.ipp  ConnectionRetryPolicy.cpp  ConnectionRetryPolicy.h  DC2DCReplicator.cpp  DC2DCReplicator.h  DirectMQClient.cpp  DirectMQClient.h  DirectMQMessage.h  DirectMQProtocol.cpp  DirectMQProtocol.h  IWALIterator.h  IdempotencyChecker.cpp  IdempotencyChecker.h  MessageBatcher.cpp  MessageBatcher.h  ReplicationApplier.cpp  ReplicationApplier.h  ReplicationCheckpoint.cpp  ReplicationCheckpoint.h  ReplicationFeedStream.cpp  ReplicationFeedStream.h  ReplicationFeedStream.ipp  ReplicationLagMonitor.cpp  ReplicationLagMonitor.h  ReplicationStatusBuilder.cpp  ReplicationStatusBuilder.h  ReplicationStatusBuilder.ipp  SequenceNumberGenerator.cpp  SequenceNumberGenerator.h  SequenceNumberTracker.cpp  SequenceNumberTracker.h  ShardWALTailer.cpp  ShardWALTailer.h  TlsConnectionConfig.cpp  TlsConnectionConfig.h
Enterprise/RestHandler/: RestHotBackupHandler.cpp  RestHotBackupHandler.h  RestReplicationHandler.cpp  RestReplicationHandler.h  RestReplicationHandler.ipp
Enterprise/RocksDBEngine/: ChangelogBuffer.cpp  ChangelogBuffer.h  EncryptionProvider.cpp  EncryptionProvider.h  IndexBuilderThreadPool.cpp  IndexBuilderThreadPool.h  KeySpacePartitioner.cpp  KeySpacePartitioner.h  RocksDBBuilderIndexEE.cpp  RocksDBBuilderIndexEE.h  RocksDBEncryptionUtils.cpp  RocksDBEncryptionUtils.h  RocksDBEncryptionUtilsEE.h  RocksDBEngineEE.h  RocksDBHotBackup.cpp  RocksDBHotBackup.h
Enterprise/Sharding/: ShardingStrategyEE.cpp  ShardingStrategyEE.h
Enterprise/Ssl/: SslServerFeatureEE.cpp  SslServerFeatureEE.h
Enterprise/StorageEngine/: HotBackupFeature.h
Enterprise/Transaction/: IgnoreNoAccessAqlTransaction.cpp  IgnoreNoAccessAqlTransaction.h  IgnoreNoAccessMethods.cpp  IgnoreNoAccessMethods.h
Enterprise/VocBase/: SmartGraphSchema.cpp  SmartGraphSchema.h  VirtualClusterSmartEdgeCollection.h
arangod/Aql/: LocalTraversalNode.cpp  LocalTraversalNode.h  MinHashFunctions.cpp  MinHashFunctions.h
arangod/Audit/: AuditFeature.cpp  AuditFeature.h
arangod/Auth/: LDAPHandler.cpp  LDAPHandler.h
arangod/Cluster/: ReadFromFollower.cpp  ReadFromFollower.h  SatelliteDistribution.cpp  SatelliteDistribution.h
arangod/Encryption/: EncryptionFeature.cpp  EncryptionFeature.h  EncryptionProvider.cpp  EncryptionProvider.h
benchmarks/: CMakeLists.txt  EncryptionBenchmark.cpp  MinHashBenchmark.cpp  ParallelIndexBenchmark.cpp  README.md  ReplicationBenchmark.cpp  SmartGraphBenchmark.cpp  TopKBenchmark.cpp
ci/: build-with-asan.sh  symbol-audit.sh
docs/: DEPLOYMENT.md  INTEGRATION_STATUS.md  USER_GUIDE.md
scripts/: Dockerfile.integration  build-with-arangodb.sh  integration-test.sh
tests/: CMakeLists.txt
tests/integration/: README.md  smoke_test.py
tests/link/: test_link_symbols.cpp
tests/mocks/: AqlFunctionMocks.h  AqlMocks.h  HotBackupMocks.h  LDAPMocks.h  MockCollectionAccessor.h  MockWALIterator.h  RCloneMocks.h  ReplicationMocks.h  RocksDBIndexMocks.h  RocksDBMocks.h  ShardingMocks.h  SslMocks.h
tests/mocks/ApplicationFeatures/: ApplicationFeature.h  ApplicationServer.h
tests/mocks/Basics/: ErrorCode.h  Result.h
tests/mocks/GeneralServer/: SslServerFeature.h
tests/mocks/ProgramOptions/: ProgramOptions.h
tests/mocks/rocksdb/: env_encryption.h
tests/mocks/velocypack/: Builder.h
tests/unit/: AuditFeatureTest.cpp  ChangelogBufferTest.cpp  CheckpointReceiverTest.cpp  DC2DCIntegrationTest.cpp  DC2DCReplicatorFeatureTest.cpp  DirectMQClientTest.cpp  DirectMQProtocolTest.cpp  EncryptionFeatureTest.cpp  EncryptionProviderTest.cpp  IResearchMinHashAnalyzerTest.cpp  IResearchOptimizeTopKTest.cpp  IdempotencyCheckerTest.cpp  IgnoreNoAccessTransactionTest.cpp  IndexBuilderThreadPoolTest.cpp  KeySpacePartitionerTest.cpp  LDAPHandlerTest.cpp  LicenseFeatureTest.cpp  LocalTraversalNodeTest.cpp  MaskingStrategiesTest.cpp  MessageBatcherTest.cpp  MinHashFunctionsTest.cpp  RCloneFeatureTest.cpp  RCloneProcessTest.cpp  ReadFromFollowerTest.cpp  ReplicationApplierTest.cpp  ReplicationCheckpointTest.cpp  ReplicationFeedStreamTest.cpp  ReplicationLagMonitorTest.cpp  ReplicationStatusBuilderTest.cpp  RestHotBackupHandlerTest.cpp  RestReplicationHandlerTest.cpp  RocksDBBuilderIndexEETest.cpp  RocksDBHotBackupTest.cpp  SatelliteDistributionTest.cpp  SequenceNumberGeneratorTest.cpp  SequenceNumberTrackerTest.cpp  ShardWALTailerTest.cpp  ShardingStrategyEETest.cpp  SmartGraphProviderTest.cpp  SmartGraphSchemaTest.cpp  (+2 more)
(+70 files in other folders)
